--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>PROXIMA</title>
+    <script src="/swipper.js"></script>
 </head>
 
 <body>
@@ -92,7 +93,7 @@
     <section
         class="features w-full bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center overflow-hidden h-max">
         <div
-            class="container mx-auto py-20 md:pt-24 px-10 md:px-16 lg:px-20 flex flex-col gap-10 justify-center items-start">
+            class="container mx-auto pt-20 md:pt-24 px-10 md:px-16 lg:px-20 flex flex-col gap-10 justify-center items-start">
             <div class="header w-full flex justify-between items-end">
                 <div class="title flex flex-col gap-7">
                     <div class="tag">
@@ -146,6 +147,62 @@
                             </h3>
                             <p>Nous avons intégré un Intelligence Artificielle, il vous assistera dans vos tracas
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section listes des destinations -->
+    <section class="destinations-list w-full bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center h-max">
+        <div
+            class="container mx-auto py-20 md:pt-24 px-10 md:px-16 lg:px-20 flex flex-col gap-10 justify-between items-start">
+            <div class="header w-full flex justify-between items-end overflow-hidden">
+                <div class="title flex flex-col gap-7">
+                    <div class="tag">
+                        <p class="flex">Destinations</p>
+                    </div>
+                    <h2 class="text-white text-3xl md:text-4xl lg:text-5xl lato-bold lg:leading-tight">
+                        Liste des <span class="lato-black">destinations</span></h2>
+                </div>
+                <div class="swipper-buttons flex gap-3">
+                    <img src="/public/chevron-left.svg" class="w-12">
+                    <img src="/public/chevron-right.svg" class="w-12">
+                </div>
+            </div>
+            <div class="content w-full overflow-hidden">
+                <div class="container gap-10 flex width-max">
+                    <div class="destination-card rounded-xl">
+                        <img src="/public/mercury.svg" class="w-full">
+                        <div class="destination-card__content flex flex-col gap-3">
+                            <h3 class="text-white  text-xl lg:text-2xl  font-bold">Planète Mercury</h3>
+                            <p>Mercure est la plus petite planète du système solaire et la plus proche du Soleil. Son
+                                orbite autour du Soleil prend 87,97 jours terrestres.</p>
+                        </div>
+                    </div>
+                    <div class="destination-card rounded-xl">
+                        <img src="/public/earth.svg" class="w-full">
+                        <div class="destination-card__content flex flex-col gap-3">
+                            <h3 class="text-white  text-xl lg:text-2xl  font-bold">Planète Terre</h3>
+                            <p>La Terre est la troisième planète après le Soleil et la seule connue pour abriter la vie,
+                                recouverte à 71% par des océans d'eau liquide. </p>
+                        </div>
+                    </div>
+                    <div class="destination-card rounded-xl">
+                        <img src="/public/mars.svg" class="w-full">
+                        <div class="destination-card__content flex flex-col gap-3">
+                            <h3 class="text-white  text-xl lg:text-2xl  font-bold">Planète Mars</h3>
+                            <p>Mars est la quatrième planète après le Soleil et la deuxième plus petite planète du
+                                système solaire, plus grande que Mercure.</p>
+                        </div>
+                    </div>
+                    <div class="destination-card rounded-xl">
+                        <img src="/public/mars.svg" class="w-full">
+                        <div class="destination-card__content flex flex-col gap-3">
+                            <h3 class="text-white  text-xl lg:text-2xl  font-bold">Planète Mars</h3>
+                            <p>Mars est la quatrième planète après le Soleil et la deuxième plus petite planète du
+                                système solaire, plus grande que Mercure.</p>
                         </div>
                     </div>
                 </div>
