--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <!-- section listes des destinations -->
     <section class="destinations-list w-full bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center h-max">
         <div
-            class="container mx-auto py-20 md:pt-24 px-10 md:px-16 lg:px-20 flex flex-col gap-10 justify-between items-start">
-            <div class="header w-full flex justify-between items-end overflow-hidden">
+            class="container mx-auto py-20 md:pt-24  flex flex-col gap-10 justify-between items-start">
+            <div class="header w-full px-10 md:px-16 lg:px-20 flex justify-between items-end overflow-hidden">
                 <div class="title flex flex-col gap-7">
                     <div class="tag">
                         <p class="flex">Destinations</p>
@@ -171,8 +171,9 @@
                     <img src="/public/chevron-right.svg" class="w-12">
                 </div>
             </div>
-            <div class="content w-full overflow-hidden">
-                <div class="container gap-10 flex width-max">
+            <div class="destinations-list__container w-full px-10 md:px-16 lg:pl-20 overflow-hidden">
+            <div class=" content w-max">
+                <div class="gap-10 flex width-max">
                     <div class="destination-card rounded-xl">
                         <img src="/public/mercury.svg" class="w-full">
                         <div class="destination-card__content flex flex-col gap-3">
@@ -207,6 +208,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
