add swiper to destination

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
     </section>
 
     <!-- section listes des destinations -->
-    <section class="destinations-list w-full bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center h-max  overflow-hidden">
+    <section
+        class="destinations-list w-full bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center h-max  overflow-hidden">
         <div class="container mx-auto py-20 md:pt-24  flex flex-col gap-10 justify-between items-start">
             <div class="header w-full px-10 md:px-16 lg:px-20 flex justify-between items-end overflow-hidden">
                 <div class="title flex flex-col gap-7">
@@ -237,6 +238,5 @@
         </div>
     </footer>
 </body>
-<script src="/swipper.js"></script>
-
+<script src="/src/helpers/swipper.js"></script>
 </html>
